--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                               <input type="radio" class="sr-only peer" name="option1" id="1 Set" value="1">
                               <label for="1 Set"
                                  class="peer-checked:bg-[#9eef80] flex flex-col bg-transparent gap-1 min-h-20 overflow-hidden text-center w-full items-center border rounded-lg cursor-pointer h-full border-[#3C422E] hover:bg-[#f6e6d9] duration-300">
-                                 <div class="font-apercu text-[#fff4ec] p-1 w-full bg-[#3C422E] delivery-discount-container">
+                                 <div
+                                    class="font-apercu text-[#fff4ec] p-1 w-full bg-[#3C422E] delivery-discount-container">
                                     <span
                                        class="flex flex-col items-center justify-center text-center text-[0.625rem] leading-none gap-0.5 min-h-7">
                                        <span>
@@ -103,7 +104,8 @@
                                        </span>
                                     </span>
                                  </div>
-                                 <strong class="font-gtalpina flex flex-col justify-center items-center text-center p-1 h-full">
+                                 <strong
+                                    class="font-gtalpina flex flex-col justify-center items-center text-center p-1 h-full">
                                     <span class="font-bold text-xl leading-none">1</span>
                                     <span class="text-[0.75rem] font-bold">Set</span>
                                  </strong>
@@ -141,7 +143,8 @@
                                        </span>
                                     </span>
                                  </div>
-                                 <strong class="font-gtalpina flex flex-col justify-center items-center text-center p-1 h-full">
+                                 <strong
+                                    class="font-gtalpina flex flex-col justify-center items-center text-center p-1 h-full">
                                     <span class="text-xl leading-none">3</span>
                                     <span class="text-[0.75rem]">Sets</span>
                                  </strong>
@@ -169,7 +172,8 @@
                         </div>
                      </fieldset>
                   </div>
-                  <fieldset class="font-gtalpina mt-2.5 border-y border-dashed border-[#3C422E]" id="product-subscription">
+                  <fieldset class="font-gtalpina mt-2.5 border-y border-dashed border-[#3C422E]"
+                     id="product-subscription">
                      <div
                         class="flex justify-between font-bold items-center py-4 cursor-pointer group one-time border-b border-dashed border-[#3C422E]">
                         <div class="flex items-center space-x-2.5">
@@ -290,7 +294,7 @@
                   </fieldset>
                   <fieldset class="font-gtalpina mt-4" id="product-purchase">
                      <button type="submit"
-                        class="font-bold hover:translate-x-1 hover:translate-y-1 h-[2.125rem] add-to-cart cursor-pointer px-4 z-10 flex bg-[#d1e030] rounded-full border border-[#3c422e] items-center justify-center text-[#3c422e] leading-none w-full text-center relative">
+                        class="font-bold hover:translate-x-1 hover:translate-y-1 duration-300 h-[2.125rem] add-to-cart cursor-pointer px-4 z-10 flex bg-[#d1e030] rounded-full border border-[#3c422e] items-center justify-center text-[#3c422e] leading-none w-full text-center relative">
                         <span class="add-to-cart-text">Subscribe - </span>
                         <span class="subtotal-after-discount">$74</span>
                      </button>
